Fix API docs
