# BTCPayServer.Plugins.LNbank/Extensions/AppExtensions.cs
@@ -1,6 +1,9 @@
 using BTCPayServer.Abstractions.Contracts;
+using BTCPayServer.Plugins.LNbank.Authentication;
+using BTCPayServer.Plugins.LNbank.Hooks;
 using BTCPayServer.Plugins.LNbank.Services;
 using BTCPayServer.Plugins.LNbank.Services.Wallets;
+using Microsoft.AspNetCore.Authorization;
 using Microsoft.Extensions.DependencyInjection;
 
 namespace BTCPayServer.Plugins.LNbank.Extensions;
@@ -18,5 +21,7 @@ public static class AppExtensions
         services.AddSingleton<HistogramService>();
         services.AddSingleton<WithdrawConfigRepository>();
         services.AddSingleton<ISwaggerProvider, LNbankSwaggerProvider>();
+        services.AddSingleton<AuthorizationRequirementHandler>();
+        services.AddScoped<IAuthorizationHandler, LNbankAuthorizationHandler>();
     }
 }
