# BTCPayServer.Plugins.LNbank/Resources/swagger/v1/swagger.template.lnbank.json
@@ -120,7 +120,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.canviewwallet"
             ]
           }
@@ -186,7 +186,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.canmanagewallet"
             ]
           }
@@ -232,7 +232,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.canmanagewallet"
             ]
           }
@@ -300,7 +300,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.cancreateinvoices"
             ]
           }
@@ -378,7 +378,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.cansendmoney"
             ]
           }
@@ -424,7 +424,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.canviewwallet"
             ]
           }
@@ -479,7 +479,7 @@
         },
         "security": [
           {
-            "API_Key": [
+            "LNbank_Access_Key": [
               "btcpay.plugin.lnbank.canviewwallet"
             ]
           }
@@ -689,11 +689,23 @@
           }
         }
       }
+    },
+    "securitySchemes": {
+      "LNbank_Access_Key": {
+        "type": "http",
+        "scheme": "bearer",
+        "description": "LNbank supports authenticating and authorizing users through an Access Key that is generated by them in the LNbank wallet settings. Send the API Key as a header value to Authorization with the format: `Bearer {token}`.\n\n The following permissions are available to the context of the user creating the API Key:\n\n* `btcpay.plugin.lnbank.canviewwallet`: Simple reading access\n* `btcpay.plugin.lnbank.cancreateinvoices`: Invoices can be created, but not paid\n* `btcpay.plugin.lnbank.cansendmoney`: The user can send money from the wallet\n* `btcpay.plugin.lnbank.canmanagewallet`: Manage the wallet and send money\n* `btcpay.plugin.lnbank.canmanagelnbank`: Admin users can manage the LNbank instance\n"
+      }
     }
   },
   "tags": [
     {
       "name": "LNbank"
+    }
+  ],
+  "security": [
+    {
+      "LNbank_Access_Key": []
     }
   ]
 }
